force-app/main/default/objects/Account/fields/Account_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Account_Cost_Center__c</fullName>
    <label>Account Cost Center OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>