force-app/main/default/objects/Account/fields/Account_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_Office__c</fullName>
    <description>Account Office, this will be populated by a flow based on the postal code of the account</description>
    <inlineHelpText>Account Office, this field will be populated based on the postal code field chosen for the account.</inlineHelpText>
    <label>Account Office</label>
    <length>100</length>
    <type>Text</type>
</CustomField>