force-app/main/default/objects/Account/fields/Account_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Account_Profit_Center__c</fullName>
    <description>Account profit center, taken from postal code areas by using a flow</description>
    <inlineHelpText>Account Profit Center - This fields is automatically updated field based on the account postal code.</inlineHelpText>
    <label>Account Profit Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>