force-app/main/default/objects/Account/fields/Area_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Area_Profit_Center__c</fullName>
    <description>Field to hold the Assigned Profit/Cost Center found from the Postal Code Area</description>
    <inlineHelpText>Field to hold the Assigned Profit/Cost Center found from the Postal Code Area</inlineHelpText>
    <label>Area Profit Center</label>
    <length>100</length>
    <type>Text</type>
</CustomField>