force-app/main/default/objects/Account/fields/Assets_related_notes__c.field-meta.xml
<CustomField>
    <fullName>Assets_related_notes__c</fullName>
    <description>Short notes regarding the customer&apos;s assets.</description>
    <inlineHelpText>Short notes regarding the customer&apos;s assets.</inlineHelpText>
    <label>Assets related notes</label>
    <type>TextArea</type>
</CustomField>