force-app/main/default/objects/Account/fields/BillingToShipping__c.field-meta.xml
<CustomField>
    <fullName>BillingToShipping__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to control whether Shipping Address is equal to Billing Address</description>
    <label>Use Billing as Shipping Address</label>
    <type>Checkbox</type>
</CustomField>