force-app/main/default/objects/Account/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <description>The Business Identification numbers also use as Tax Identification Number</description>
    <externalId>true</externalId>
    <label>Business Id OLD</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>