force-app/main/default/objects/Account/fields/Business_Type_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Attribute__c</fullName>
    <formula>IF(IsPersonAccount,&quot;Consumer&quot;,
IF(ISBLANK(TEXT( Business_Type__c )),TEXT(Type),TEXT( Business_Type__c)))</formula>
    <label>Business Type Attribute</label>
    <type>Text</type>
</CustomField>