force-app/main/default/objects/Account/fields/Country_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Country_Attribute__c</fullName>
    <formula>TEXT(BillingCountryCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Attribute OLD</label>
    <type>Text</type>
</CustomField>