force-app/main/default/objects/Account/fields/Customer_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country__c</fullName>
    <formula>If(IsPersonAccount, PersonMailingCountry, BillingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Country OLD</label>
    <type>Text</type>
</CustomField>