force-app/main/default/objects/Account/fields/Customer_Location__c.field-meta.xml
<CustomField>
    <fullName>Customer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Location</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Location Type is not an Account Location</errorMessage>
        <filterItems>
            <field>Location.LocationType</field>
            <operation>equals</operation>
            <value>Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>