force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Customer Number OLD</label>
    <length>25</length>
    <type>Text</type>
</CustomField>