force-app/main/default/objects/Account/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>Determine the Customer Type</description>
    <formula>IF(IsPersonAccount,&quot;Consumer&quot;, 
IF(ISBLANK(TEXT( Business_Type__c )),TEXT(Type),TEXT( Business_Type__c)))</formula>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>