force-app/main/default/objects/Account/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>