force-app/main/default/objects/Account/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description>Delivery method selected for the installation</description>
    <inlineHelpText>Delivery method selected for the installation</inlineHelpText>
    <label>Delivery Method OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Methods</valueSetName>
    </valueSet>
</CustomField>