force-app/main/default/objects/Account/fields/District_Type__c.field-meta.xml
<CustomField>
    <fullName>District_Type__c</fullName>
    <label>District Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_District_Types</valueSetName>
    </valueSet>
</CustomField>