force-app/main/default/objects/Account/fields/DistrictAttribute__c.field-meta.xml
<CustomField>
    <fullName>DistrictAttribute__c</fullName>
    <formula>District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>District Attribute</label>
    <type>Text</type>
</CustomField>