force-app/main/default/objects/Account/fields/DistrictLevel__c.field-meta.xml
<CustomField>
    <fullName>DistrictLevel__c</fullName>
    <label>District Level/Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_District_Types</valueSetName>
    </valueSet>
</CustomField>