force-app/main/default/objects/Account/fields/Email_opt_out_date_time__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_out_date_time__c</fullName>
    <description>Date/Time when customer has opt out from email</description>
    <label>Email Opt Out Date/Time OLD</label>
    <type>DateTime</type>
</CustomField>