force-app/main/default/objects/Account/fields/EnablePortalLink__c.field-meta.xml
<CustomField>
    <fullName>EnablePortalLink__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnablePortalLink</label>
    <type>Checkbox</type>
</CustomField>