force-app/main/default/objects/Account/fields/Financing_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Financing_Customer_Number__c</fullName>
    <label>Financing Customer Number OLD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>