force-app/main/default/objects/Account/fields/Finland_Sync_to_MC__c.field-meta.xml
<CustomField>
    <fullName>Finland_Sync_to_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used by marketing cloud to define MC region/country</description>
    <label>Finland Sync to MC OLD</label>
    <type>Checkbox</type>
</CustomField>