force-app/main/default/objects/Account/fields/Is_Converted_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted Lead OLD</label>
    <type>Checkbox</type>
</CustomField>