force-app/main/default/objects/Account/fields/MailingToBilling__c.field-meta.xml
<CustomField>
    <fullName>MailingToBilling__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag to control whether Billing Address is equal to Mailing Address (B2C)</description>
    <label>Use Mailing as Billing Address</label>
    <type>Checkbox</type>
</CustomField>