force-app/main/default/objects/Account/fields/Owner_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Owner_Profit_Center__c</fullName>
    <formula>Owner.Profit_Center_Attribute__c</formula>
    <label>Owner Profit Center</label>
    <type>Text</type>
</CustomField>