force-app/main/default/objects/Account/fields/Owner_s_BU__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_BU__c</fullName>
    <formula>Owner.Profit_Center_Attribute__c</formula>
    <label>Owner&apos;s BU OLD</label>
    <type>Text</type>
</CustomField>