force-app/main/default/objects/Account/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <description>The Person Identification numbers also use as Tax Identification Number</description>
    <externalId>true</externalId>
    <label>Person Id OLD</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>