force-app/main/default/objects/Account/fields/Postal_Code_Area__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postal Code Area OLD</label>
    <referenceTo>Postal_Code_Area__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>