force-app/main/default/objects/Account/fields/Postal_Code_Area_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Area_Attribute__c</fullName>
    <description>Shows the Area Code of the Postal Code Area assigned</description>
    <formula>Postal_Code_Area__r.Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>the Area Code of the Postal Code Area assigned</inlineHelpText>
    <label>Postal Code Area Attribute OLD</label>
    <type>Text</type>
</CustomField>