force-app/main/default/objects/Account/fields/Quote_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration__c</fullName>
    <label>Quote Expiration OLD</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>