force-app/main/default/objects/Account/fields/Region_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Region_Attribute__c</fullName>
    <description>Shows the Region of the Postal Code Area assigned</description>
    <formula>Postal_Code_Area__r.Region__c</formula>
    <inlineHelpText>The Region of the Postal Code Area assigned</inlineHelpText>
    <label>Region Attribute</label>
    <type>Text</type>
</CustomField>