force-app/main/default/objects/Account/fields/Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area__c</fullName>
    <label>Sales Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>