force-app/main/default/objects/Account/fields/Sales_Area_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_Cost_Center__c</fullName>
    <description>Formula to determine the Assigned Profit/Cost Center based on the Postal Code Area</description>
    <formula>IF( Country_Attribute__c&lt;&gt;&quot;FI&quot;, TEXT(Postal_Code_Area__r.Profit_Center__c),
    TEXT(Owner.Profit_Center__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Cost Center OLD</label>
    <type>Text</type>
</CustomField>