force-app/main/default/objects/Account/fields/Sales_Country__c.field-meta.xml
<CustomField>
    <fullName>Sales_Country__c</fullName>
    <label>Sales Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Countries</valueSetName>
    </valueSet>
</CustomField>