force-app/main/default/objects/Account/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <label>Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Districts</valueSetName>
    </valueSet>
</CustomField>