force-app/main/default/objects/Account/fields/Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Office OLD</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>