force-app/main/default/objects/Account/fields/Sales_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Sales_Profit_Center__c</fullName>
    <description>Field to allow Changing the Account Profit Center if different from Owner or Postal Code Area</description>
    <inlineHelpText>Set the Account Profit Center if different from Owner or Postal Code Area</inlineHelpText>
    <label>Sales Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>