force-app/main/default/objects/Account/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <label>Sales Territory OLD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>