force-app/main/default/objects/Account/fields/Sales_User_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Sales_User_Cost_Center__c</fullName>
    <description>Field to hold the Assigned Profit/Cost Center of the Sales User</description>
    <formula>Owner.Profit_Center_Attribute__c</formula>
    <inlineHelpText>Shows the Assigned Profit/Cost Center of the Sales User</inlineHelpText>
    <label>Sales User Cost Center</label>
    <type>Text</type>
</CustomField>