force-app/main/default/objects/Account/fields/ServiceAttribute__c.field-meta.xml
<CustomField>
    <fullName>ServiceAttribute__c</fullName>
    <formula>SUBSTITUTE(TRIM(
IF(NOT(ISBLANK(OrganizationAttribute__c )),OrganizationAttribute__c ,&apos;&apos;)
+IF(NOT(ISBLANK(CountryAttribute__c )),&apos;_&apos;+CountryAttribute__c ,&apos;&apos;)
+IF(NOT(ISBLANK( DistrictAttribute__c )),&apos;_&apos;+ SUBSTITUTE(DistrictAttribute__c , CountryAttribute__c+&apos;_&apos;, &apos;&apos;) ,&apos;&apos;)
+IF(NOT(ISBLANK( ProfitCenterAttribute__c )),&apos;_&apos;+ProfitCenterAttribute__c ,&apos;&apos;)
+IF(NOT(ISBLANK( OfficeAttribute__c )),&apos;_&apos;+SUBSTITUTE(OfficeAttribute__c , CountryAttribute__c+&apos;-&apos;, &apos;&apos;),&apos;&apos;)
+IF(NOT(ISBLANK( CustomerSegmentAttribute__c )),&apos;_&apos;+CustomerSegmentAttribute__c ,&apos;&apos;)
+IF(AND(ISBLANK( CustomerSegmentAttribute__c ),NOT(ISBLANK( BusinessTypeAttribute__c ))),&apos;_&apos;+BusinessTypeAttribute__c ,&apos;&apos;)
),&apos; &apos;, &apos;_&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Attribute</label>
    <type>Text</type>
</CustomField>