force-app/main/default/objects/Account/fields/SMS_Opt_Out_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_Out_Date_Time__c</fullName>
    <description>DAte/Time when customer opts out via sms</description>
    <label>SMS Opt Out Date/Time</label>
    <type>DateTime</type>
</CustomField>