force-app/main/default/objects/Account/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State OLD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>