force-app/main/default/objects/Account/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <description>Shows the Street Address of the Account</description>
    <formula>IF(  IsPersonAccount,  PersonMailingStreet, BillingStreet)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Street Address of the Account</inlineHelpText>
    <label>Street Address OLD</label>
    <type>Text</type>
</CustomField>