force-app/main/default/objects/Account/fields/SubArea_Attribute__c.field-meta.xml
<CustomField>
    <fullName>SubArea_Attribute__c</fullName>
    <description>Shows the Sub Region of the Postal Code Area assigned</description>
    <formula>Postal_Code_Area__r.Sub_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Sub Region of the Postal Code Area assigned</inlineHelpText>
    <label>SubArea Attribute OLD</label>
    <type>Text</type>
</CustomField>