force-app/main/default/objects/Account/fields/UniqueId__c.field-meta.xml
<CustomField>
    <fullName>UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>