force-app/main/default/objects/Account/fields/ValueAddedTax__c.field-meta.xml
<CustomField>
    <fullName>ValueAddedTax__c</fullName>
    <description>The applicable Value Added Tax Percentage</description>
    <inlineHelpText>The applicable Value Added Tax Percentage</inlineHelpText>
    <label>Value Added Tax %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>