force-app/main/default/objects/Account/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <description>VAT value respective to the corporate interface</description>
    <label>VAT-%</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>