force-app/main/default/objects/Account/fields/What_not_to_sell__c.field-meta.xml
<CustomField>
    <fullName>What_not_to_sell__c</fullName>
    <description>Short description of what should not be offered to this customer.</description>
    <inlineHelpText>Short description of what should not be offered to this customer.</inlineHelpText>
    <label>What not to sell OLD</label>
    <type>TextArea</type>
</CustomField>