force-app/main/default/objects/Account/validationRules/Billing_Address_Change_not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Change_not_Allowed</fullName>
    <active>false</active>
    <errorConditionFormula>IF( !MailingToBilling__c,
  IF( ISCHANGED(PersonMailingAddress),
     IF( ISCHANGED(BillingAddress),False,True),False),False)</errorConditionFormula>
    <errorMessage>You can not change the Billing Address when marked to be same as Mailing Address</errorMessage>
</ValidationRule>