force-app/main/default/objects/Account/validationRules/Billing_Address_City_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_City_Mandatory</fullName>
    <active>false</active>
    <description>Rule to Validate that for B2C Accounts, the billing address includes Street, PostalCode, City</description>
    <errorConditionFormula>AND(
    $Setup.AutomationBypass__c.SkipValidation__c = false,
    NOT(IsPersonAccount),
    ISBLANK(BillingCity)
)</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>Please fill in Billing Address City</errorMessage>
</ValidationRule>