force-app/main/default/objects/Account/validationRules/Billing_Address_Country_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Country_Mandatory</fullName>
    <active>false</active>
    <description>Rule to Validate that for B2C Accounts that Billing Country exists</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
!IsPersonAccount  &amp;&amp;
ISBLANK(  BillingCountry )</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please fill in Billing Address Country</errorMessage>
</ValidationRule>