force-app/main/default/objects/Account/validationRules/Billing_Address_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Mandatory</fullName>
    <active>false</active>
    <description>Rule to Validate that for B2B Accounts, the billing address includes Street,PostalCode, City</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
IsPersonAccount  &amp;&amp;
(ISBLANK( BillingCity) ||
ISBLANK(  BillingCountry ) ||
ISBLANK(   BillingStreet ) ||
ISBLANK(    BillingPostalCode  ))</errorConditionFormula>
    <errorMessage>Please fill in Billing address</errorMessage>
</ValidationRule>