force-app/main/default/objects/Account/validationRules/Billing_Address_PostalCode_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_PostalCode_Mandatory</fullName>
    <active>false</active>
    <description>Rule to Validate that for B2C Accounts, the billing address includes Street,PostalCode, City</description>
    <errorConditionFormula>$Setup.AutomationBypass__c.SkipValidation__c = false &amp;&amp;
!IsPersonAccount  &amp;&amp;
ISBLANK( BillingPostalCode)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Please fill in Billing Address Postal Code</errorMessage>
</ValidationRule>